--- a/css/style.css
+++ b/css/style.css
@@ -134,8 +134,8 @@ header {
     text-align: center; }
     .banner-section .col-md-8 p {
       font-size: 17px; }
-    .banner-section .title1 {
-      max-width: 550px;
+    .banner-section .col-md-8 .title1 {
+      max-width: 500px;
       margin: auto; }
 
   .partner-section div {
@@ -146,26 +146,32 @@ header {
     padding-bottom: 50px; }
     .banner-section .col-md-8 {
       padding: 0 10px; }
+      .banner-section .col-md-8 .title1 {
+        max-width: 450px;
+        margin: auto; }
       .banner-section .col-md-8 .heading {
         font-size: 35px; }
-        .banner-section .col-md-8 .heading br {
-          display: none; }
       .banner-section .col-md-8 p {
         font-size: 15px; }
       .banner-section .col-md-8 .btn-bg {
         padding: 9px 18px;
-        font-size: 15px; }
+        font-size: 15px;
+        display: block;
+        margin: auto; }
       .banner-section .col-md-8 .btn-transparent {
         padding: 9px 18px;
-        font-size: 15px; }
-    .banner-section .btn-bg {
-      display: block;
-      margin: auto; }
-    .banner-section .btn-transparent {
-      display: block;
-      margin: 20px auto; }
+        font-size: 15px;
+        display: block;
+        margin: 20px auto; }
 
   .partner-section div {
     padding: 0 10px; } }
+@media (max-width: 480px) {
+  .banner-section .col-md-8 .heading {
+    font-size: 28px !important; }
+    .banner-section .col-md-8 .heading br {
+      display: none; }
+    .banner-section .col-md-8 .heading p {
+      font-size: 14px; } }
 
 /*# sourceMappingURL=style.css.map */
